# ascend-boost-comm

./: .gitignore  CMakeLists.txt  LICENSE  OAT.xml  OMNERS  OWNERS  README.en.md  README.md  SECURITYNOTE.md  Third_Party_Open_Source_Software_Notice  version.info
example/: CMakeLists.txt
example/include/atbops/: ops.h
example/include/atbops/params/: addcustom.h  common.h  params.h  unpad.h
example/ops/: CMakeLists.txt  ops.cpp
example/ops/addcustom/: CMakeLists.txt  addcustom_kernel.cpp  addcustom_operation.cpp
example/ops/addcustom/op_kernel/: addcustom.cpp
example/ops/addcustom/tiling/: addcustom_tiling.cpp  addcustom_tiling.h  tiling_data.h
example/ops/include/: common.h  common_func.h  hardware.h  iterator.h  layout.h  mem.h  mma.h  set_fpc.h  simd.h  utils.h
example/ops/include/iterators/: gm_to_l1_iterator.inc  gm_to_ub_iterator.inc  l0c_to_gm_iterator.inc  l0c_to_l1_iterator.inc  l0c_to_ub_iterator.inc  l1_to_bt_iterator.inc  l1_to_fb_iterator.inc  l1_to_l0_iterator.inc  l1_to_ub_iterator.inc
example/ops/unpad/: CMakeLists.txt  unpad_kernel.cpp  unpad_operation.cpp
example/ops/unpad/op_kernel/: kernel_unpad.cpp  unpad.cpp
example/ops/unpad/tiling/: tiling_data.h  unpad_tiling.cpp  unpad_tiling.h
example/ops/utils/: common.h
example/simpleops/: CMakeLists.txt
example/simpleops/include/params/: fast_soft_max.h  fast_soft_max_grad.h  kvcache.h  params.h  rope.h  rope_grad.h
example/simpleops/kvcache/: CMakeLists.txt  kvcache_kernel.cpp  kvcache_operation.cpp  tiling_data.h
example/simpleops/kvcache/op_kernel/: kvcache.cpp  kvcache_dynamic_batch.cpp  kvcache_nd_init_tiling.h  kvcache_nz.cpp
example/simpleops/rope/: CMakeLists.txt  rope_kernel.cpp  rope_operation.cpp  tiling_data.h
example/simpleops/rope/op_kernel/: common_val.h  rotary_pos_emb.cpp  rotary_pos_emb_base.h  rotary_pos_emb_bf16.h  rotary_pos_emb_fp16.h  rotary_pos_emb_fp32.h
example/simpleops/utils/: common.h
example/simpleops_tests/: test_kvcache.py  test_rope.py
example/simpleops_tests/autogen/: CMakeLists.txt  op_desc_json.h  op_desc_json_auto.py
example/tests/: CMakeLists.txt
example/tests/autogen/: CMakeLists.txt  op_desc_json.h  op_desc_json_auto.py
example/tests/pythontest/: op_test.py
example/tests/pythontest/optest/: test_addcustom.py  test_unpad.py
memset/: CMakeLists.txt
src/: CMakeLists.txt  sym_check.cpp
src/include/mki/: bin_handle.h  kernel.h  kernel_info.h  launch_param.h  op_desc.h  operation.h  param_to_string.h  run_info.h  tensor.h  tensor_desc.h  types.h
src/include/mki/base/: aicpu_kernel_base.h  bishengir_kernel_base.h  kernel_base.h  operation_base.h
src/include/mki_loader/: creator.h  op_register.h  op_schedule_base.h  ops.h
src/mki_loader/: loader.cpp  loader.h  op_schedule.cpp  op_schedule.h  op_schedule_base.cpp  ops.cpp
src/schedule/base/: aicpu_kernel_base.cpp  bin_handle.cpp  bishengir_kernel_base.cpp  kernel_base.cpp  operation_base.cpp
src/schedule/common/: kernel_info.cpp  launch_param.cpp  param_to_string.cpp  run_info.cpp  tensor.cpp  tensor_desc.cpp  types.cpp
src/utils/any/: any.cpp
src/utils/bin_file/: bin_file.cpp
src/utils/binfile/: binfile.cpp
src/utils/cfg/: cfg_core.cpp
src/utils/checktensor/: check_tensor.cpp
src/utils/cmd/: cmd.cpp
src/utils/dl/: dl.cpp
src/utils/file_system/: file_system.cpp
src/utils/filesystem/: filesystem.cpp
src/utils/fp16/: fp16_t.cpp
src/utils/inifile/: ini_file.cpp
src/utils/log/: log_core.cpp  log_entity.cpp  log_sink_file.cpp  log_sink_stdout.cpp  log_stream.cpp
src/utils/math/: math.cpp  tensor_utils.cpp
src/utils/memset/: clear_tensors.cpp  memset_kernel.cpp  memset_launcher.cpp
src/utils/memset/kernel/: CMakeLists.txt  memory_set.cc  memset.cc  memset_kernel.cc
src/utils/operationir/: operation_if_cfg.cpp  operation_ir.cpp  operation_ir_cfg.cpp
src/utils/platform/: platform_configs.cpp  platform_info.cpp  platform_infos_def.cpp  platform_infos_impl.cpp  platform_infos_impl.h  platform_manager.cpp
src/utils/profiling/: profiling_funcs.cpp
src/utils/rt/backend/: backend.cpp  backend_factory.cpp  rt_backend.cpp  rt_backend_module.cpp  rtbackend.cpp  rtbackend_module.cpp
src/utils/share_memory/: share_memory.cpp
src/utils/status/: status.cpp
src/utils/stringify/: stringify.cpp
src/utils/strings/: match.cpp  str_checker.cpp  str_replace.cpp  str_split.cpp
src/utils/time/: timer.cpp
tests/autogen/: CMakeLists.txt  op_desc_json.cpp  op_desc_json.h  op_desc_json_auto.py  op_desc_json_ph.cpp
tests/framework/: CMakeLists.txt
tests/framework/kerneltest_extension/: kerneltest_extension.cpp  kerneltest_extension.h
tests/framework/test_util/: FilterTool.py  float_util.cpp  float_util.h  golden.cpp  golden.h  op_test.cppx  op_test.h
tests/framework/torch_extension/: mki_torch.cpp  mki_torch.h  op_desc_json.cpp
tests/selftest/: CMakeLists.txt  device_version_check.cpp  device_version_check.h
tests/selftest/api/: any_test.cpp  binfile_test.cpp  cmd_test.cpp  compare_test.cpp  device_code_loader_test.cppx  dl_test.cpp  filesystem_test.cpp  log_test.cpp  math_test.cpp  op_register_test.cpp  operation_base_test.cpp  platform_test.cpp  rt_device_test.cpp  rt_test.cpp  rtbackend_module_test.cpp  status_test.cpp  strings_test.cpp  svector_test.cpp  timer_test.cpp
tests/selftest/common/: run_info_test.cpp
tests/selftest/operationir/: test_operationir.cpp
tests/selftest/utils/: test_memset.cpp
tests/unittest/: CMakeLists.txt
tests/unittest/api/: any_test.cpp  binfile_test.cpp  cmd_test.cpp  compare_test.cpp  dl_test.cpp  filesystem_test.cpp  log_test.cpp  math_test.cpp  op_register_test.cpp  operation_base_test.cpp  platform_test.cpp  rt_device_test.cpp  rt_test.cpp  rtbackend_module_test.cpp  status_test.cpp  strings_test.cpp  svector_test.cpp  timer_test.cpp
tests/unittest/cfg/: cfg_test.cpp
tests/unittest/common/: error_code_test.cpp  launch_param_test.cpp  run_info_test.cpp  tensor_test.cpp  types_test.cpp
tests/unittest/operationir/: test_operationir.cpp
tests/unittest/utils/: test_memset.cpp  test_share_memory.cpp
(+218 files in other folders)
